<resources>
    <string name="app_name">Makrokoll</string>
    <string name="nr_kcal">%1$d kcal</string>
    <string name="PFC_info">%1$dP | %2$dF | %3$dC</string>
    <string name="filter">Filtrera</string>
    <string name="discover_recipes">Alla recept</string>
    <string name="saved_recipes">Sparade recept</string>

    <!-- actionbar-->
    <string name="search">Sök</string>

    <!-- add_recipe -->
    <string name="name_of_recipe">Namn på recept</string>
    <string name="nr_of_portions">Antal portioner</string>
    <string name="name_of_ingredient">Namn på ingrediens</string>
    <string name="weight_volume">Vikt/volym</string>
    <string name="protein_source">Primär proteinkälla</string>
    <string name="ingredients">Ingredienser</string>
    <string name="image">Bild</string>
    <string name="add_ingredient">Lägg till ingrediens</string>
    <string name="nutrients_per_serving">Näringsvärde per portion</string>
    <string name="kcal">Kalorier</string>
    <string name="protein">Protein</string>
    <string name="fat">Fett</string>
    <string name="carbs">Kolhydrater</string>
    <string name="nr_of_kcal">Antal kcal</string>
    <string name="nr_of_protein">Protein (g)</string>
    <string name="nr_of_fat">Fett (g)</string>
    <string name="nr_of_carbs">Kolhydrater (g)</string>
    <string name="description">Beskrivning (frivilligt)</string>
    <string name="step_by_step">Tillagning - steg för steg</string>
    <string name="add_image">Lägg till bild</string>
    <string name="publish">Publicera</string>

    <string-array name="numbers">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
    </string-array>

    <string-array name="measurements">
        <item>gram</item>
        <item>kg</item>

        <item>krm</item>
        <item>tsk</item>
        <item>msk</item>

        <item>ml</item>
        <item>cl</item>
        <item>dl</item>
        <item>L</item>

        <item>st</item>
        <item>nypa</item>

    </string-array>


    <!-- Filter strings -->
    <string name="fish">Fisk</string>
    <string name="pork">Fläsk</string>
    <string name="bird">Fågel</string>
    <string name="milk">Mjölk</string>
    <string name="beef">Nöt</string>
    <string name="veggie">Vegetariskt</string>
    <string name="game">Vilt</string>
    <string name="egg">Ägg</string>
    <string name="others">Övrigt</string>

    <!-- Detailed recipe view -->
    <string name="nr_of_servings">%1$d portioner</string>
    <string name="how_to_do">Gör så här</string>
    <string name="title_activity_detailed_recipe">DetailedRecipeActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>


</resources>